--- a/catalogo-vehiculos/package.json
+++ b/catalogo-vehiculos/package.json
@@ -13,6 +13,7 @@
     "@mantine/carousel": "^8.3.9",
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
+    "@tabler/icons-react": "^3.35.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
